# shuihu_contract

./: .gitignore  README.md  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json
.github/workflows/: radar.yml
anchor/: Anchor.toml  tsconfig.json
anchor/programs/shuihu_dapp/: Cargo.toml
anchor/programs/shuihu_dapp/src/: constants.rs  errors.rs  events.rs  lib.rs  state.rs
anchor/programs/shuihu_dapp/src/instructions/: mod.rs
anchor/programs/shuihu_dapp/src/instructions/admin/: initialize.rs  mod.rs
anchor/programs/shuihu_dapp/src/instructions/play/: claim.rs  collect.rs  combine.rs  mint.rs  mod.rs  reveal.rs
anchor/setup/: setup.sh  start.sh
anchor/src/: index.ts  orao_vrf_utils.local.ts  shuihu_dapp-exports.ts
anchor/tests/: orao_vrf_utils.local.ts  shuihu_dapp.local.ts  shuihu_dapp.mainnet.test.ts
