[package]
name = "shuihu_dapp"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "shuihu_dapp"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
mpl-core = { version = "0.8.0" , features = ["anchor"]}
spl-token-metadata-interface = "0.3.3"
spl-type-length-value = "0.4.3"
orao-solana-vrf = { version = "0.5.0", default-features = false, features = ["cpi"] }
proc-macro2 = "=1.0.94"
solana-program = "=1.18.16"